--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="shortcut icon" href="https://img.icons8.com/?size=100&id=113570&format=png&color=000000" type="image/x-icon">
     <title>Calculator</title>
     <link rel="stylesheet" href="style.css" />
   </head>
